--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
 	<div class="main-container">
 		<div class="clock-container">
-			<span>00</span>:
-			<span>00</span>:
-			<span>00</span>
+			<span class="counter-container hour-container">00</span>:
+			<span class="counter-container minutes-container">00</span>:
+			<span class="counter-container seconds-container">00</span>
 		</div>
 	</div>
 	
